# rust-core-war

./: 202507-status.md  Cargo.toml  DEVELOPMENT_PHASES.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  MVP_REQUIREMENTS.md  README.md  SPECS.md  boot.sh  run_battles.sh
.cursor/rules/: rust-corewar-development.mdc
benches/: engine_benchmark.rs
examples/: bomber.cor  bomber.s  dwarf.cor  dwarf.s  fortress.s  imp.cor  imp.s  looper.cor  looper.s  paper.cor  paper.s  quicksilver.s  replicator.s  scanner.cor  scanner.s  simple.cor  simple.s  stone.cor  stone.s  survivor.cor  survivor.s  vampire.s  visual_demo.rs
src/: error.rs  lib.rs  main.rs
src/assembler/: encoder.rs  lexer.rs  mod.rs  parser.rs
src/ui/: advanced_memory.rs  app.rs  components.rs  effects.rs  input.rs  mod.rs
src/vm/: engine.rs  instruction.rs  loader.rs  memory.rs  mod.rs  process.rs  scheduler.rs
tests/: game_integration.rs  invalid_instruction_test.rs  property_tests.proptest-regressions  property_tests.rs  test_assembler.rs  visual_effects_test.rs  visual_integration_test.rs
