[package]
name = "corewar"
version = "0.1.0"
edition = "2024"
authors = ["Mathius Johnson"]
description = "Core War implementation in Rust with terminal visualization"
license = "MIT"
repository = "https://github.com/mathiusjohnson/rust-core-war"
keywords = ["corewar", "redcode", "assembly", "game", "vm"]
categories = ["games", "emulators"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
ratatui = "0.26"
crossterm = "0.27"
tempfile = "3.20.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4.0"

[[bench]]
name = "engine_benchmark"
harness = false

